<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kistler_driver</name>
  <version>1.0.0</version>
  <description>KISTLER ROS Driver</description>
  <maintainer email="wz.901118@gmail.com">Zhi Wang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>kistler_driver_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>ros2_socketcan</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
